<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cpp03_exercise</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="1127545598@qq.com">dashao</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>turtlesim</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>ros2launch</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
